// Original file: ../../rust/server/proto/webrtc.proto


export interface CreatePeerConnectionRequest {
  'sessionId'?: (string);
  'peerConnectionId'?: (string);
  'name'?: (string);
}

export interface CreatePeerConnectionRequest__Output {
  'sessionId': (string);
  'peerConnectionId': (string);
  'name': (string);
}
