// Original file: ../../rust/server/proto/webrtc.proto


export interface AddTrackRequest {
  'sessionId'?: (string);
  'peerConnectionId'?: (string);
  'trackId'?: (string);
  'trackLabel'?: (string);
}

export interface AddTrackRequest__Output {
  'sessionId': (string);
  'peerConnectionId': (string);
  'trackId': (string);
  'trackLabel': (string);
}
