// Original file: ../../rust/server/proto/webrtc.proto


export interface AddTransceiverRequest {
  'sessionId'?: (string);
  'peerConnectionId'?: (string);
  'trackId'?: (string);
  'trackLabel'?: (string);
}

export interface AddTransceiverRequest__Output {
  'sessionId': (string);
  'peerConnectionId': (string);
  'trackId': (string);
  'trackLabel': (string);
}
