// Original file: ../../rust/server/proto/webrtc.proto


export interface SetSDPResponse {
  'sessionId'?: (string);
  'peerConnectionId'?: (string);
  'success'?: (boolean);
}

export interface SetSDPResponse__Output {
  'sessionId': (string);
  'peerConnectionId': (string);
  'success': (boolean);
}
